--- a/compiler.html
+++ b/compiler.html
@@ -185,7 +185,7 @@ nav button i, .dropbtn i {
       <a href="#">SkillForge</a>
     </div>
     <div class="nav-links">
-      <a href="index.html">Acasă</a>
+      <a href="acasa.php">Acasă</a>
       <a href="#">Proiecte</a>
       <div class="dropdown">
         <button class="dropbtn" id="dropdownBtn">
@@ -193,7 +193,7 @@ nav button i, .dropbtn i {
         </button>
         <div class="dropdown-content" id="dropdownContent">
           <a href="compiler.html">Compiler HTML & CSS & JS</a>
-          <a href="compcpy.html">Compiler C++ & Python</a>
+          <a href="compcpy.php">Compiler C++ & Python</a>
         </div>
       </div>
     </div>
