--- a/compiler.html
+++ b/compiler.html
@@ -182,11 +182,11 @@ nav button i, .dropbtn i {
   <nav>
     <div class="logo">
       <img src="images/logo.webp" alt="logo">
-      <a href="#">SkillForge</a>
+      <a href="acasa.php">SkillForge</a>
     </div>
     <div class="nav-links">
       <a href="acasa.php">Acasă</a>
-      <a href="#">Proiecte</a>
+      <a href="tutorials.php">Lecții de început</a>
       <div class="dropdown">
         <button class="dropbtn" id="dropdownBtn">
           Compilere <i class="fa fa-caret-down"></i>
